--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mantine/carousel": "^8.3.12",
     "@mantine/core": "^8.3.12",
     "@mantine/hooks": "^8.3.12",
+    "@mantine/modals": "^8.3.12",
     "@mantine/notifications": "^8.3.12",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
